@@ -17,6 +17,7 @@ class InstallController extends Controller
 					$messagesTable = $_POST['messagesTable'];
 					$rolesTable = $_POST['rolesTable'];
 					$userRoleTable = $_POST['userRoleTable'];
+					$userUserTable = $_POST['userUserTable'];
 
 					// Clean up existing Installation
 					$db->createCommand(sprintf('drop table if exists %s, %s, %s, %s, %s, %s',
@@ -25,7 +26,8 @@ class InstallController extends Controller
 								$profileTable,
 								$messagesTable,
 								$rolesTable,
-								$userRoleTable
+								$userRoleTable,
+								$userUserTable
 								)
 							)->execute();
 
@@ -48,31 +50,30 @@ class InstallController extends Controller
 
 					$db->createCommand($sql)->execute();
 
-					
 					if(isset($_POST['installProfiles']))  
-{
+					{
 
-					// Create Profile Fields Table
-					$sql = "CREATE TABLE IF NOT EXISTS `" . $profileFieldsTable . "` (
-						`id` int(10) NOT NULL auto_increment,
-						`varname` varchar(50) NOT NULL,
-						`title` varchar(255) NOT NULL,
-						`field_type` varchar(50) NOT NULL,
-						`field_size` int(3) NOT NULL default '0',
-						`field_size_min` int(3) NOT NULL default '0',
-						`required` int(1) NOT NULL default '0',
-						`match` varchar(255) NOT NULL,
-						`range` varchar(255) NOT NULL,
-						`error_message` varchar(255) NOT NULL,
-						`other_validator` varchar(255) NOT NULL,
-						`default` varchar(255) NOT NULL,
-						`position` int(3) NOT NULL default '0',
-						`visible` int(1) NOT NULL default '0',
-						PRIMARY KEY  (`id`),
-						KEY `varname` (`varname`,`visible`)
-							) ENGINE=InnoDB DEFAULT CHARSET=utf8 AUTO_INCREMENT=1 ; ";
+						// Create Profile Fields Table
+						$sql = "CREATE TABLE IF NOT EXISTS `" . $profileFieldsTable . "` (
+							`id` int(10) NOT NULL auto_increment,
+							`varname` varchar(50) NOT NULL,
+							`title` varchar(255) NOT NULL,
+							`field_type` varchar(50) NOT NULL,
+							`field_size` int(3) NOT NULL default '0',
+							`field_size_min` int(3) NOT NULL default '0',
+							`required` int(1) NOT NULL default '0',
+							`match` varchar(255) NOT NULL,
+							`range` varchar(255) NOT NULL,
+							`error_message` varchar(255) NOT NULL,
+							`other_validator` varchar(255) NOT NULL,
+							`default` varchar(255) NOT NULL,
+							`position` int(3) NOT NULL default '0',
+							`visible` int(1) NOT NULL default '0',
+							PRIMARY KEY  (`id`),
+							KEY `varname` (`varname`,`visible`)
+								) ENGINE=InnoDB DEFAULT CHARSET=utf8 AUTO_INCREMENT=1 ; ";
 
-					$db->createCommand($sql)->execute();
+						$db->createCommand($sql)->execute();
 
 
 					// Create Profiles Table
@@ -114,6 +115,18 @@ class InstallController extends Controller
 								) ENGINE=InnoDB DEFAULT CHARSET=utf8 AUTO_INCREMENT=1 ;";
 
 						$db->createCommand($sql)->execute();
+
+						// Create User_has_user Table
+
+						$sql = "CREATE TABLE IF NOT EXISTS `".$userUserTable."` (
+							`id` int(11) NOT NULL auto_increment,
+							`owner_id` int(11) NOT NULL,
+							`slave_id` int(11) NOT NULL,
+							PRIMARY KEY  (`id`)
+								) ENGINE=InnoDB DEFAULT CHARSET=utf8 AUTO_INCREMENT=1 ;";
+
+						$db->createCommand($sql)->execute();
+
 					}
 
 					if(isset($_POST['installMessages'])) 
@@ -145,6 +158,14 @@ class InstallController extends Controller
 							(2, 'demo', '".User::encrypt('demo')."', '', 0, 1266543330, 0, 1)";
 						$db->createCommand($sql)->execute();
 
+						if(isset($_POST['installRole']))
+						{
+							$sql = "INSERT INTO `".$rolesTable."` (`title`,`description`) VALUES
+								('UserCreator', 'This users can create new Users'),
+								('UserRemover', 'This users can remove other Users')";
+							$db->createCommand($sql)->execute();
+
+						}
 						if(isset($_POST['installProfiles']))
 						{
 							$sql = "INSERT INTO `".$profileTable."` (`profile_id`, `user_id`, `lastname`, `firstname`, `email`) VALUES
