@@ -4,19 +4,27 @@ $this->breadcrumbs=array(
 );
 ?>
 
-
 <?php
 $this->menu = array(
-array('label'=>Yii::t('UserModule.user', 'Create User'), 'url'=>array('create')),
-array('label'=>Yii::t('UserModule.user', 'Manage User'), 'url'=>array('admin')),
-array('label'=>Yii::t('UserModule.user', 'Manage profile Fields'), 'url'=>array('profileField/admin')),
-);
+		array('label'=>Yii::t('UserModule.user', 'Create User'),
+			'url'=>array('create'),
+			'visible' => Yii::app()->user->isAdmin(),
+			),
+		array('label'=>Yii::t('UserModule.user', 'Manage User'),
+			'url'=>array('admin'),
+			'visible' => Yii::app()->user->isAdmin()
+			),
+		array('label'=>Yii::t('UserModule.user', 'Manage profile Fields'),
+			'url'=>array('profileField/admin'),
+			'visible' => $this->module->hasModule('profiles')
+			&& Yii::app()->user->isAdmin()
+			),
+		array('label'=>Yii::t('UserModule.user', 'Manage Roles'),
+			'url'=>array('role/role/admin'),
+			'visible' => $this->module->hasModule('role')
+		&& Yii::app()->user->isAdmin())
+		);
 
-
-if($this->module->hasModule('role'))
-{
-	$this->menu[] = array('label'=>Yii::t('UserModule.user', 'Manage Roles'), 'url'=>array('role/role/admin'));
-}
 ?>
 
 	<h1> <?php echo Yii::t('UserModule.user', 'Users: '); ?></h1>
@@ -27,8 +35,9 @@ if($this->module->hasModule('role'))
 		array(
 			'name' => 'username',
 			'type'=>'raw',
-			'value' => 'CHtml::link(CHtml::encode($data->username),array("user/profile","id"=>$data->id))',
-		),
+			'value' => 'CHtml::link(CHtml::encode($data->username),
+				array("user/profile","id"=>$data->id))',
+			),
 		array(
 			'name' => 'createtime',
 			'value' => 'date(UserModule::$dateFormat,$data->createtime)',
@@ -40,9 +49,4 @@ if($this->module->hasModule('role'))
 	),
 )); ?>
 
-<?php 
-if(Yii::app()->controller->module->debug) 
-{
-	echo 'Powered by yii-user ' .  Yii::app()->controller->module->version;
-}
-?>
+
