@@ -12,12 +12,16 @@ $this->breadcrumbs=array(
 
 $this->menu=array(
 		array(
+			'label'=>Yii::t('UserModule.user', 'Manage my Users'),
+			'url'=>array('admin'),
+			'visible' => Yii::app()->user->hasUsers()),
+		array(
 			'label'=>Yii::t('UserModule.user', 'Manage User'),
 			'url'=>array('admin'),
 			'visible' => Yii::app()->user->isAdmin()),
 		array(
 			'label'=>Yii::t('UserModule.user', 'List User'),
-			'url'=>array('index'),
+			'url'=>array('/user/user/index'),
 			'visible' => !Yii::app()->user->isAdmin()),
 		array(
 			'label'=>Yii::t('UserModule.user', 'Profile'),
